# hand-isomorphism

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
include/: deck.h  hand_index.h  hand_isomorphism.h  hand_isomorphism.hpp  hand_isomorphism_cxx.h  isomorphism.h  isomorphism_c.h
include/hand-isomorphism/: hand-isomorphism.h
include/hand_isomorphism/: hand_isomorphism.h
src/: bitops.h  check-main.c  check-main.cpp  deck.h  hand-isomorphism.c  hand_index-impl.h  hand_index.c  hand_index.cpp  hand_index.h  hand_isomorphism.cpp  hand_isomorphism.h  hand_isomorphism_c.cpp  hand_isomorphism_c.h  hand_isomorphism_cxx.cpp  hand_isomorphism_py.cpp  isomorphism_c.cpp
tests/: CMakeLists.txt  c_wrapper.cpp  indexing.cpp  round_size.cpp
